refactor: 优化字段访问器生成器和日志输出
- 简化 `FieldAccessorGenerator` 代码，移除不必要的注释和冗余逻辑
- 更新 `FieldAccessorFactory` 以移除字节码生成失败时的降级处理
- 在 `RawRecordProtocolTest` 中注释掉 `logKeyFields` 调用并调整日志输出格式