@@ -1,431 +1,288 @@
 package com.lambda.cloud.netty.protocol.accessor.asm;
 
-import static org.objectweb.asm.Opcodes.*;
-
 import com.lambda.cloud.netty.protocol.accessor.FieldAccessor;
+import org.objectweb.asm.*;
+
+import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import org.objectweb.asm.ClassWriter;
-import org.objectweb.asm.MethodVisitor;
-import org.objectweb.asm.Type;
 
 /**
- * 基于Unsafe的高性能字段访问器生成器
- * <p>
- * 使用sun.misc.Unsafe进行直接内存访问，完全绕过Java访问权限检查，
- * 提供比传统字节码访问更高的性能和更好的兼容性。
- * </p>
+ * 高性能 Unsafe 字段访问器生成器
  *
- * @author Jin
+ * <p>支持 JDK 8–21，无需 --add-opens，动态生成访问器类与 Lookup 在同一包。</p>
  */
-public class FieldAccessorGenerator {
+public final class FieldAccessorGenerator {
 
     private static final String FIELD_ACCESSOR_SUFFIX = "$FieldAccessor";
-    private static final AtomicLong COUNTER = new AtomicLong(0);
-    private static final AccessorClassLoader ACCESSOR_CLASS_LOADER = new AccessorClassLoader();
-    private static final ConcurrentHashMap<String, FieldAccessor> GENERATOR_CACHE = new ConcurrentHashMap<>();
-    
-    /**
-     * 为指定字段生成基于Unsafe的高性能访问器
-     *
-     * @param field 目标字段
-     * @return 字段访问器实例
-     * @throws RuntimeException 如果生成失败
-     */
-    public static FieldAccessor generateAccessor(Field field) {
-        return GENERATOR_CACHE.computeIfAbsent(generateCacheKey(field), k -> getFieldAccessor(field));
+    private static final AtomicLong COUNTER = new AtomicLong();
+    private static final ConcurrentHashMap<String, FieldAccessor> CACHE = new ConcurrentHashMap<>();
+    private static final AccessorClassLoader LOADER = new AccessorClassLoader();
+
+    // Unsafe 相关
+    private static final String UNSAFE_CLASS_NAME;
+    private static final Class<?> UNSAFE_CLASS;
+
+    static {
+        Class<?> unsafeClass;
+        String className;
+
+        try {
+            className = "jdk.internal.misc.Unsafe";
+            unsafeClass = Class.forName(className);
+            Field f = unsafeClass.getDeclaredField("theUnsafe");
+            f.setAccessible(true);
+        } catch (Throwable ignore) {
+            try {
+                className = "sun.misc.Unsafe";
+                unsafeClass = Class.forName(className);
+                Field f = unsafeClass.getDeclaredField("theUnsafe");
+                f.setAccessible(true);
+            } catch (Throwable e) {
+                throw new IllegalStateException("Cannot access Unsafe", e);
+            }
+        }
+        UNSAFE_CLASS_NAME = className.replace('.', '/');
+        UNSAFE_CLASS = unsafeClass;
     }
 
-    private static FieldAccessor getFieldAccessor(Field field) {
-        String className = generateClassName(field);
-        byte[] classBytes = generateUnsafeAccessorClass(field, className);
-        Class<?> accessorClass = ACCESSOR_CLASS_LOADER.defineClass(className, classBytes);
+    private FieldAccessorGenerator() {}
+
+    /** 生成或获取字段访问器 */
+    public static FieldAccessor generateAccessor(Field field) {
+        if (field == null) throw new IllegalArgumentException("field == null");
+        String key = field.getDeclaringClass().getName() + "#" + field.getName();
+        return CACHE.computeIfAbsent(key, k -> createAccessor(field));
+    }
+
+    /** 创建访问器 */
+    private static FieldAccessor createAccessor(Field field) {
         try {
+            // 动态生成类与当前类在同一包
+            String pkg = FieldAccessorGenerator.class.getPackageName();
+            String className = pkg + "." + field.getName() + FIELD_ACCESSOR_SUFFIX + COUNTER.incrementAndGet();
+            byte[] bytes = generateClass(field, className);
+            Class<?> accessorClass = LOADER.defineClass(className, bytes);
             return (FieldAccessor) accessorClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            throw new RuntimeException("Failed to create unsafe field accessor for: " + field, e);
+            throw new RuntimeException("Failed to generate accessor for " + field, e);
         }
     }
 
-    /**
-     * 生成访问器类名
-     */
-    private static String generateClassName(Field field) {
-        return field.getDeclaringClass().getName() + "$" + field.getName() + FIELD_ACCESSOR_SUFFIX
-                + COUNTER.incrementAndGet();
-    }
-
-    private static String generateCacheKey(Field field) {
-        if (field == null) {
-            throw new IllegalArgumentException("field cannot be null");
-        }
-            // 使用类全限定名 + 字段名作为缓存 key
-            return field.getDeclaringClass().getName() + "#" + field.getName();
-    }
-
-    /**
-     * 生成基于Unsafe的访问器类字节码
-     */
-    private static byte[] generateUnsafeAccessorClass(Field field, String className) {
+    /** 生成访问器字节码 */
+    private static byte[] generateClass(Field field, String className) {
+        String internalClass = className.replace('.', '/');
+        String iface = Type.getInternalName(FieldAccessor.class);
         ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_MAXS | ClassWriter.COMPUTE_FRAMES);
-        String internalClassName = className.replace('.', '/');
-        String fieldAccessorType = Type.getInternalName(FieldAccessor.class);
 
-        // 定义类
-        cw.visit(V1_8, ACC_PUBLIC | ACC_FINAL, internalClassName, null, "java/lang/Object", new String[] {
-            fieldAccessorType
-        });
+        cw.visit(Opcodes.V1_8, Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL, internalClass, null,
+                "java/lang/Object", new String[]{iface});
 
-        // 添加静态字段：UNSAFE 和 FIELD_OFFSET
-        generateUnsafeFields(cw, field);
+        // static final Unsafe + OFFSET
+        cw.visitField(Opcodes.ACC_PRIVATE | Opcodes.ACC_STATIC | Opcodes.ACC_FINAL,
+                "UNSAFE", "L" + UNSAFE_CLASS_NAME + ";", null, null).visitEnd();
+        cw.visitField(Opcodes.ACC_PRIVATE | Opcodes.ACC_STATIC | Opcodes.ACC_FINAL,
+                "OFFSET", "J", null, null).visitEnd();
 
-        // 生成静态初始化块
-        generateStaticInitializer(cw, field, internalClassName);
+        // <clinit>
+        MethodVisitor mv = cw.visitMethod(Opcodes.ACC_STATIC, "<clinit>", "()V", null, null);
+        mv.visitCode();
+        // Unsafe 实例
+        mv.visitLdcInsn(Type.getType(UNSAFE_CLASS));
+        mv.visitLdcInsn("theUnsafe");
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Class",
+                "getDeclaredField", "(Ljava/lang/String;)Ljava/lang/reflect/Field;", false);
+        mv.visitInsn(Opcodes.DUP);
+        mv.visitInsn(Opcodes.ICONST_1);
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/reflect/Field",
+                "setAccessible", "(Z)V", false);
+        mv.visitInsn(Opcodes.ACONST_NULL);
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/reflect/Field",
+                "get", "(Ljava/lang/Object;)Ljava/lang/Object;", false);
+        mv.visitTypeInsn(Opcodes.CHECKCAST, UNSAFE_CLASS_NAME);
+        mv.visitFieldInsn(Opcodes.PUTSTATIC, internalClass, "UNSAFE",
+                "L" + UNSAFE_CLASS_NAME + ";");
 
-        // 生成构造函数
-        generateConstructor(cw, internalClassName);
+        // 字段偏移量
+        mv.visitFieldInsn(Opcodes.GETSTATIC, internalClass, "UNSAFE", "L" + UNSAFE_CLASS_NAME + ";");
+        mv.visitLdcInsn(Type.getType(field.getDeclaringClass()));
+        mv.visitLdcInsn(field.getName());
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Class",
+                "getDeclaredField", "(Ljava/lang/String;)Ljava/lang/reflect/Field;", false);
+        String offsetMethod = Modifier.isStatic(field.getModifiers()) ? "staticFieldOffset" : "objectFieldOffset";
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, UNSAFE_CLASS_NAME,
+                offsetMethod, "(Ljava/lang/reflect/Field;)J", false);
+        mv.visitFieldInsn(Opcodes.PUTSTATIC, internalClass, "OFFSET", "J");
 
-        // 生成基于Unsafe的setValue方法
-        generateUnsafeSetValueMethod(cw, field);
+        mv.visitInsn(Opcodes.RETURN);
+        mv.visitMaxs(3, 0);
+        mv.visitEnd();
 
-        // 生成基于Unsafe的getValue方法
-        generateUnsafeGetValueMethod(cw, field);
+        // 构造函数
+        MethodVisitor init = cw.visitMethod(Opcodes.ACC_PUBLIC, "<init>", "()V", null, null);
+        init.visitCode();
+        init.visitVarInsn(Opcodes.ALOAD, 0);
+        init.visitMethodInsn(Opcodes.INVOKESPECIAL, "java/lang/Object", "<init>", "()V", false);
+        init.visitInsn(Opcodes.RETURN);
+        init.visitMaxs(1, 1);
+        init.visitEnd();
 
-        // 生成getFieldName方法
-        generateGetFieldNameMethod(cw, field);
-
-        // 生成getFieldType方法
-        generateGetFieldTypeMethod(cw, field);
+        // getValue
+        generateGetValue(cw, field, internalClass);
+        // setValue
+        generateSetValue(cw, field, internalClass);
+        // getFieldName
+        generateGetFieldName(cw, field);
+        // getFieldType
+        generateGetFieldType(cw, field);
 
         cw.visitEnd();
         return cw.toByteArray();
     }
 
-    /**
-     * 添加Unsafe相关的静态字段
-     */
-    private static void generateUnsafeFields(ClassWriter cw, Field field) {
-        // private static final Unsafe UNSAFE;
-        cw.visitField(ACC_PRIVATE | ACC_STATIC | ACC_FINAL, "UNSAFE", "Lsun/misc/Unsafe;", null, null)
-                .visitEnd();
-
-        // private static final long FIELD_OFFSET;
-        cw.visitField(ACC_PRIVATE | ACC_STATIC | ACC_FINAL, "FIELD_OFFSET", "J", null, null)
-                .visitEnd();
-    }
-
-    /**
-     * 生成静态初始化块
-     */
-    private static void generateStaticInitializer(ClassWriter cw, Field field, String internalClassName) {
-        MethodVisitor mv = cw.visitMethod(ACC_STATIC, "<clinit>", "()V", null, null);
+    /** getValue 方法 */
+    private static void generateGetValue(ClassWriter cw, Field field, String internalClass) {
+        MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC, "getValue",
+                "(Ljava/lang/Object;)Ljava/lang/Object;", null, null);
         mv.visitCode();
 
-        // 获取Unsafe实例
-        generateGetUnsafeCall(mv);
-        mv.visitFieldInsn(PUTSTATIC, internalClassName, "UNSAFE", "Lsun/misc/Unsafe;");
-
-        // 获取字段偏移量
-        mv.visitFieldInsn(GETSTATIC, internalClassName, "UNSAFE", "Lsun/misc/Unsafe;");
-
-        // 加载目标类的Class对象
-        mv.visitLdcInsn(Type.getType(field.getDeclaringClass()));
-
-        // 加载字段名
-        mv.visitLdcInsn(field.getName());
-
-        // 调用Class.getDeclaredField
-        mv.visitMethodInsn(
-                INVOKEVIRTUAL,
-                "java/lang/Class",
-                "getDeclaredField",
-                "(Ljava/lang/String;)Ljava/lang/reflect/Field;",
-                false);
-
-        // 调用Unsafe.objectFieldOffset
+        mv.visitFieldInsn(Opcodes.GETSTATIC, internalClass, "UNSAFE",
+                "L" + UNSAFE_CLASS_NAME + ";");
         if (Modifier.isStatic(field.getModifiers())) {
-            mv.visitMethodInsn(
-                    INVOKEVIRTUAL, "sun/misc/Unsafe", "staticFieldOffset", "(Ljava/lang/reflect/Field;)J", false);
+            mv.visitLdcInsn(Type.getType(field.getDeclaringClass()));
+            mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, UNSAFE_CLASS_NAME,
+                    "staticFieldBase", "(Ljava/lang/Class;)Ljava/lang/Object;", false);
         } else {
-            mv.visitMethodInsn(
-                    INVOKEVIRTUAL, "sun/misc/Unsafe", "objectFieldOffset", "(Ljava/lang/reflect/Field;)J", false);
+            mv.visitVarInsn(Opcodes.ALOAD, 1);
         }
+        mv.visitFieldInsn(Opcodes.GETSTATIC, internalClass, "OFFSET", "J");
 
-        mv.visitFieldInsn(PUTSTATIC, internalClassName, "FIELD_OFFSET", "J");
+        // 调用对应 getXXX
+        String descriptor;
+        String method;
+        Class<?> type = field.getType();
+        if (type == int.class) { method = "getInt"; descriptor = "(Ljava/lang/Object;J)I"; } 
+        else if (type == long.class) { method = "getLong"; descriptor = "(Ljava/lang/Object;J)J"; } 
+        else if (type == boolean.class) { method = "getBoolean"; descriptor = "(Ljava/lang/Object;J)Z"; } 
+        else if (type == byte.class) { method = "getByte"; descriptor = "(Ljava/lang/Object;J)B"; } 
+        else if (type == char.class) { method = "getChar"; descriptor = "(Ljava/lang/Object;J)C"; } 
+        else if (type == short.class) { method = "getShort"; descriptor = "(Ljava/lang/Object;J)S"; } 
+        else if (type == float.class) { method = "getFloat"; descriptor = "(Ljava/lang/Object;J)F"; } 
+        else if (type == double.class) { method = "getDouble"; descriptor = "(Ljava/lang/Object;J)D"; } 
+        else { method = "getObject"; descriptor = "(Ljava/lang/Object;J)Ljava/lang/Object;"; }
 
-        mv.visitInsn(RETURN);
-        mv.visitMaxs(3, 0);
-        mv.visitEnd();
-    }
-
-    /**
-     * 生成获取Unsafe实例的字节码
-     */
-    private static void generateGetUnsafeCall(MethodVisitor mv) {
-        // 尝试通过反射获取Unsafe
-        mv.visitLdcInsn(Type.getType("sun.misc.Unsafe"));
-        mv.visitLdcInsn("theUnsafe");
-        mv.visitMethodInsn(
-                INVOKEVIRTUAL,
-                "java/lang/Class",
-                "getDeclaredField",
-                "(Ljava/lang/String;)Ljava/lang/reflect/Field;",
-                false);
-        mv.visitInsn(DUP);
-        mv.visitInsn(ICONST_1);
-        mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/reflect/Field", "setAccessible", "(Z)V", false);
-        mv.visitInsn(ACONST_NULL);
-        mv.visitMethodInsn(
-                INVOKEVIRTUAL, "java/lang/reflect/Field", "get", "(Ljava/lang/Object;)Ljava/lang/Object;", false);
-        mv.visitTypeInsn(CHECKCAST, "sun/misc/Unsafe");
-    }
-
-    /**
-     * 生成构造函数
-     */
-    private static void generateConstructor(ClassWriter cw, String internalClassName) {
-        MethodVisitor mv = cw.visitMethod(ACC_PUBLIC, "<init>", "()V", null, null);
-        mv.visitCode();
-
-        mv.visitVarInsn(ALOAD, 0);
-        mv.visitMethodInsn(INVOKESPECIAL, "java/lang/Object", "<init>", "()V", false);
-
-        mv.visitInsn(RETURN);
-        mv.visitMaxs(1, 1);
-        mv.visitEnd();
-    }
-
-    /**
-     * 生成基于Unsafe的setValue方法
-     */
-    private static void generateUnsafeSetValueMethod(ClassWriter cw, Field field) {
-        MethodVisitor mv =
-                cw.visitMethod(ACC_PUBLIC, "setValue", "(Ljava/lang/Object;Ljava/lang/Object;)V", null, new String[] {
-                    "java/lang/IllegalAccessException"
-                });
-        Class<?> fieldType = getFieldType(field, mv);
-
-        // 加载值并转换类型
-        mv.visitVarInsn(ALOAD, 2);
-        generateUnsafeUnboxing(mv, fieldType);
-
-        // 调用相应的Unsafe.putXXX方法
-        generateUnsafePutCall(mv, fieldType);
-
-        mv.visitInsn(RETURN);
-        mv.visitMaxs(5, 3);
-        mv.visitEnd();
-    }
-
-    /**
-     * 生成基于Unsafe的getValue方法
-     */
-    private static void generateUnsafeGetValueMethod(ClassWriter cw, Field field) {
-        MethodVisitor mv =
-                cw.visitMethod(ACC_PUBLIC, "getValue", "(Ljava/lang/Object;)Ljava/lang/Object;", null, new String[] {
-                    "java/lang/IllegalAccessException"
-                });
-        Class<?> fieldType = getFieldType(field, mv);
-
-        // 调用相应的Unsafe.getXXX方法
-        generateUnsafeGetCall(mv, fieldType);
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, UNSAFE_CLASS_NAME, method, descriptor, false);
 
         // 装箱基本类型
-        generateUnsafeBoxing(mv, fieldType);
+        if (type.isPrimitive()) {
+            boxPrimitive(mv, type);
+        }
 
-        mv.visitInsn(ARETURN);
+        mv.visitInsn(Opcodes.ARETURN);
         mv.visitMaxs(4, 2);
         mv.visitEnd();
     }
 
-    private static Class<?> getFieldType(Field field, MethodVisitor mv) {
+    /** setValue 方法 */
+    private static void generateSetValue(ClassWriter cw, Field field, String internalClass) {
+        MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC, "setValue",
+                "(Ljava/lang/Object;Ljava/lang/Object;)V", null, null);
         mv.visitCode();
 
-        Class<?> fieldType = field.getType();
-        boolean isStatic = Modifier.isStatic(field.getModifiers());
-        String internalClassName = field.getDeclaringClass().getName().replace('.', '/') + "$" + field.getName()
-                + FIELD_ACCESSOR_SUFFIX + "1";
-
-        // 加载Unsafe实例
-        mv.visitFieldInsn(GETSTATIC, internalClassName, "UNSAFE", "Lsun/misc/Unsafe;");
-
-        if (isStatic) {
-            // 对于静态字段，加载静态字段的基地址
-            mv.visitFieldInsn(GETSTATIC, internalClassName, "UNSAFE", "Lsun/misc/Unsafe;");
+        mv.visitFieldInsn(Opcodes.GETSTATIC, internalClass, "UNSAFE",
+                "L" + UNSAFE_CLASS_NAME + ";");
+        if (Modifier.isStatic(field.getModifiers())) {
             mv.visitLdcInsn(Type.getType(field.getDeclaringClass()));
-            mv.visitMethodInsn(
-                    INVOKEVIRTUAL,
-                    "sun/misc/Unsafe",
-                    "staticFieldBase",
-                    "(Ljava/lang/Class;)Ljava/lang/Object;",
-                    false);
+            mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, UNSAFE_CLASS_NAME,
+                    "staticFieldBase", "(Ljava/lang/Class;)Ljava/lang/Object;", false);
         } else {
-            // 对于实例字段，加载目标对象
-            mv.visitVarInsn(ALOAD, 1);
+            mv.visitVarInsn(Opcodes.ALOAD, 1);
         }
+        mv.visitFieldInsn(Opcodes.GETSTATIC, internalClass, "OFFSET", "J");
 
-        // 加载字段偏移量
-        mv.visitFieldInsn(GETSTATIC, internalClassName, "FIELD_OFFSET", "J");
-        return fieldType;
+        // 加载值并拆箱
+        Class<?> type = field.getType();
+        mv.visitVarInsn(Opcodes.ALOAD, 2);
+        if (type.isPrimitive()) unboxPrimitive(mv, type);
+
+        // 调用 putXXX
+        String method;
+        String desc;
+        if (type == int.class) { method = "putInt"; desc = "(Ljava/lang/Object;JI)V"; } 
+        else if (type == long.class) { method = "putLong"; desc = "(Ljava/lang/Object;JJ)V"; } 
+        else if (type == boolean.class) { method = "putBoolean"; desc = "(Ljava/lang/Object;JZ)V"; } 
+        else if (type == byte.class) { method = "putByte"; desc = "(Ljava/lang/Object;JB)V"; } 
+        else if (type == char.class) { method = "putChar"; desc = "(Ljava/lang/Object;JC)V"; } 
+        else if (type == short.class) { method = "putShort"; desc = "(Ljava/lang/Object;JS)V"; } 
+        else if (type == float.class) { method = "putFloat"; desc = "(Ljava/lang/Object;JF)V"; } 
+        else if (type == double.class) { method = "putDouble"; desc = "(Ljava/lang/Object;JD)V"; } 
+        else { method = "putObject"; desc = "(Ljava/lang/Object;JLjava/lang/Object;)V"; }
+
+        mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, UNSAFE_CLASS_NAME, method, desc, false);
+        mv.visitInsn(Opcodes.RETURN);
+        mv.visitMaxs(5, 3);
+        mv.visitEnd();
     }
 
-    /**
-     * 生成Unsafe拆箱代码
-     */
-    private static void generateUnsafeUnboxing(MethodVisitor mv, Class<?> fieldType) {
-        if (fieldType.isPrimitive()) {
-            if (fieldType == boolean.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Boolean");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Boolean", "booleanValue", "()Z", false);
-            } else if (fieldType == byte.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Byte");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Byte", "byteValue", "()B", false);
-            } else if (fieldType == char.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Character");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Character", "charValue", "()C", false);
-            } else if (fieldType == short.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Short");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Short", "shortValue", "()S", false);
-            } else if (fieldType == int.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Integer");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Integer", "intValue", "()I", false);
-            } else if (fieldType == long.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Long");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Long", "longValue", "()J", false);
-            } else if (fieldType == float.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Float");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Float", "floatValue", "()F", false);
-            } else if (fieldType == double.class) {
-                mv.visitTypeInsn(CHECKCAST, "java/lang/Double");
-                mv.visitMethodInsn(INVOKEVIRTUAL, "java/lang/Double", "doubleValue", "()D", false);
-            }
-        } else {
-            // 对象类型直接转换
-            mv.visitTypeInsn(CHECKCAST, Type.getInternalName(fieldType));
-        }
-    }
-
-    /**
-     * 生成Unsafe装箱代码
-     */
-    private static void generateUnsafeBoxing(MethodVisitor mv, Class<?> fieldType) {
-        if (fieldType.isPrimitive()) {
-            if (fieldType == boolean.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Boolean", "valueOf", "(Z)Ljava/lang/Boolean;", false);
-            } else if (fieldType == byte.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Byte", "valueOf", "(B)Ljava/lang/Byte;", false);
-            } else if (fieldType == char.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Character", "valueOf", "(C)Ljava/lang/Character;", false);
-            } else if (fieldType == short.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Short", "valueOf", "(S)Ljava/lang/Short;", false);
-            } else if (fieldType == int.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Integer", "valueOf", "(I)Ljava/lang/Integer;", false);
-            } else if (fieldType == long.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Long", "valueOf", "(J)Ljava/lang/Long;", false);
-            } else if (fieldType == float.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Float", "valueOf", "(F)Ljava/lang/Float;", false);
-            } else if (fieldType == double.class) {
-                mv.visitMethodInsn(INVOKESTATIC, "java/lang/Double", "valueOf", "(D)Ljava/lang/Double;", false);
-            }
-        }
-        // 对象类型不需要装箱
-    }
-
-    /**
-     * 生成Unsafe的putXXX方法调用
-     */
-    private static void generateUnsafePutCall(MethodVisitor mv, Class<?> fieldType) {
-        if (fieldType == boolean.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putBoolean", "(Ljava/lang/Object;JZ)V", false);
-        } else if (fieldType == byte.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putByte", "(Ljava/lang/Object;JB)V", false);
-        } else if (fieldType == char.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putChar", "(Ljava/lang/Object;JC)V", false);
-        } else if (fieldType == short.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putShort", "(Ljava/lang/Object;JS)V", false);
-        } else if (fieldType == int.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putInt", "(Ljava/lang/Object;JI)V", false);
-        } else if (fieldType == long.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putLong", "(Ljava/lang/Object;JJ)V", false);
-        } else if (fieldType == float.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putFloat", "(Ljava/lang/Object;JF)V", false);
-        } else if (fieldType == double.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "putDouble", "(Ljava/lang/Object;JD)V", false);
-        } else {
-            // 对象类型
-            mv.visitMethodInsn(
-                    INVOKEVIRTUAL, "sun/misc/Unsafe", "putObject", "(Ljava/lang/Object;JLjava/lang/Object;)V", false);
-        }
-    }
-
-    /**
-     * 生成Unsafe的getXXX方法调用
-     */
-    private static void generateUnsafeGetCall(MethodVisitor mv, Class<?> fieldType) {
-        if (fieldType == boolean.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getBoolean", "(Ljava/lang/Object;J)Z", false);
-        } else if (fieldType == byte.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getByte", "(Ljava/lang/Object;J)B", false);
-        } else if (fieldType == char.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getChar", "(Ljava/lang/Object;J)C", false);
-        } else if (fieldType == short.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getShort", "(Ljava/lang/Object;J)S", false);
-        } else if (fieldType == int.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getInt", "(Ljava/lang/Object;J)I", false);
-        } else if (fieldType == long.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getLong", "(Ljava/lang/Object;J)J", false);
-        } else if (fieldType == float.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getFloat", "(Ljava/lang/Object;J)F", false);
-        } else if (fieldType == double.class) {
-            mv.visitMethodInsn(INVOKEVIRTUAL, "sun/misc/Unsafe", "getDouble", "(Ljava/lang/Object;J)D", false);
-        } else {
-            // 对象类型
-            mv.visitMethodInsn(
-                    INVOKEVIRTUAL, "sun/misc/Unsafe", "getObject", "(Ljava/lang/Object;J)Ljava/lang/Object;", false);
-        }
-    }
-
-    /**
-     * 生成getFieldName方法
-     */
-    private static void generateGetFieldNameMethod(ClassWriter cw, Field field) {
-        MethodVisitor mv = cw.visitMethod(ACC_PUBLIC, "getFieldName", "()Ljava/lang/String;", null, null);
+    /** getFieldName */
+    private static void generateGetFieldName(ClassWriter cw, Field field) {
+        MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC, "getFieldName",
+                "()Ljava/lang/String;", null, null);
         mv.visitCode();
-
         mv.visitLdcInsn(field.getName());
-
-        mv.visitInsn(ARETURN);
+        mv.visitInsn(Opcodes.ARETURN);
         mv.visitMaxs(1, 1);
         mv.visitEnd();
     }
 
-    /**
-     * 生成getFieldType方法
-     */
-    private static void generateGetFieldTypeMethod(ClassWriter cw, Field field) {
-        MethodVisitor mv = cw.visitMethod(ACC_PUBLIC, "getFieldType", "()Ljava/lang/Class;", null, null);
+    /** getFieldType */
+    private static void generateGetFieldType(ClassWriter cw, Field field) {
+        MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC, "getFieldType",
+                "()Ljava/lang/Class;", null, null);
         mv.visitCode();
-
         mv.visitLdcInsn(Type.getType(field.getType()));
-
-        mv.visitInsn(ARETURN);
+        mv.visitInsn(Opcodes.ARETURN);
         mv.visitMaxs(1, 1);
         mv.visitEnd();
     }
 
-    /**
-     * 简化的类加载器
-     */
+    /** 装箱 */
+    private static void boxPrimitive(MethodVisitor mv, Class<?> type) {
+        if (type == int.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Integer", "valueOf", "(I)Ljava/lang/Integer;", false);
+        else if (type == long.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Long", "valueOf", "(J)Ljava/lang/Long;", false);
+        else if (type == boolean.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Boolean", "valueOf", "(Z)Ljava/lang/Boolean;", false);
+        else if (type == byte.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Byte", "valueOf", "(B)Ljava/lang/Byte;", false);
+        else if (type == char.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Character", "valueOf", "(C)Ljava/lang/Character;", false);
+        else if (type == short.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Short", "valueOf", "(S)Ljava/lang/Short;", false);
+        else if (type == float.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Float", "valueOf", "(F)Ljava/lang/Float;", false);
+        else if (type == double.class) mv.visitMethodInsn(Opcodes.INVOKESTATIC, "java/lang/Double", "valueOf", "(D)Ljava/lang/Double;", false);
+    }
+
+    /** 拆箱 */
+    private static void unboxPrimitive(MethodVisitor mv, Class<?> type) {
+        if (type == int.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Integer"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Integer", "intValue", "()I", false); }
+        else if (type == long.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Long"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Long", "longValue", "()J", false); }
+        else if (type == boolean.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Boolean"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Boolean", "booleanValue", "()Z", false); }
+        else if (type == byte.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Byte"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Byte", "byteValue", "()B", false); }
+        else if (type == char.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Character"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Character", "charValue", "()C", false); }
+        else if (type == short.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Short"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Short", "shortValue", "()S", false); }
+        else if (type == float.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Float"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Float", "floatValue", "()F", false); }
+        else if (type == double.class) { mv.visitTypeInsn(Opcodes.CHECKCAST, "java/lang/Double"); mv.visitMethodInsn(Opcodes.INVOKEVIRTUAL, "java/lang/Double", "doubleValue", "()D", false); }
+        // 对象类型无需拆箱
+    }
+
+    /** 简化 ClassLoader */
     private static class AccessorClassLoader extends ClassLoader {
-
-        public AccessorClassLoader() {
-            super();
-        }
-
         public Class<?> defineClass(String name, byte[] bytes) {
-            return defineClass(name, bytes, 0, bytes.length);
+            try {
+                // JDK 9+ 使用 Lookup.defineClass
+                return MethodHandles.lookup().defineClass(bytes);
+            } catch (IllegalAccessException e) {
+                // fallback JDK 8
+                return super.defineClass(name, bytes, 0, bytes.length);
+            }
         }
     }
 }
